[gd_scene load_steps=4 format=4 uid="uid://c888oipvlrdxg"]

[ext_resource type="Script" uid="uid://djhxonlpuhh3" path="res://scenes/window_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cyat3p7fmmmyn" path="res://textures/icons/wind_turbine.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cb3b68p1s5bql" path="res://textures/icons/circle_full.png" id="3"]

[node name="InfoPanel" type="Panel"]
custom_minimum_size = Vector2(380, 0)
offset_right = 380.0
offset_bottom = 580.0
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Network"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconPanel" type="Panel" parent="InfoContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_type_variation = &"BackPanel"

[node name="Icon" type="TextureRect" parent="InfoContainer/IconPanel"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1

[node name="Owned" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
text = "Active: 3/5"
horizontal_alignment = 1

[node name="Description" type="Label" parent="InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
theme_override_constants/line_spacing = -4
text = "Generates Download and Upload Speed based on the amount of Infinity Routers inserted"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="New" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 0.252632, 0.192889, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 22.0
offset_bottom = 22.0
texture = ExtResource("3")
expand_mode = 1

[node name="AddButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
focus_mode = 0
theme_type_variation = &"ButtonHighlighted"
text = "action_add"

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
